First cut at removal of RMI Activation.